tests/derive_ui/value_enum_two_fallback.rs
use clap::ValueEnum;

#[derive(ValueEnum, Clone, Debug)]
enum Opt {
    #[clap(fallback)]
    First(String),
    #[clap(fallback)]
    Second(String),
}

fn main() {}
